refactoring to work with java 17 - took out ArrayList.reversed, addFirst, removeFirst calls